# lighty_brighty

./: Cargo.toml  README.md  prototype.sh
src/: brightness_logger.rs  kde_brightness_control_trait.rs  kde_powermanagement_suspendsession.rs  main.rs  sensor_proxy_trait.rs
src/examples/: example.rs  prototype.sh
