[package]
name = "lighty_brighty"
version = "0.1.0"
edition = "2021"

#[bin]
#name=lightybrightyd
#path=src/main.rs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "2.0.1"
async-std = {version = "1.10.0", features = ["attributes"]}
futures-util = "0.3.19"
