[package]
name = "lighty_brighty"
version = "0.2.1"
edition = "2021"

#[bin]
#name=lightybrightyd
#path=src/main.rs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
zbus = "2.0.1"
async-std = {version = "1.10.0", features = ["attributes"]}
futures-util = "0.3.19"
log = "0.4.14"
simplelog = "0.11.2"
clap = "3.0.13"